Table users {
  user_id varchar(36) [pk]
  phone_number varchar(20) [unique, not null]
  user_type enum [not null, note: 'parent or driver']
  is_active boolean [default: true]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp
  last_login timestamp
  fcm_token varchar(255) [note: 'Firebase Cloud Messaging token']
  
  indexes {
    phone_number
    user_type
  }
}

Table otp_verification {
  otp_id int [pk, increment]
  phone_number varchar(20) [not null]
  otp_code varchar(6) [not null]
  is_verified boolean [default: false]
  expires_at timestamp [not null]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  
  indexes {
    (phone_number, otp_code)
    expires_at
  }
}

Table parents {
  parent_id varchar(36) [pk]
  user_id varchar(36) [unique, not null, ref: - users.user_id]
  name varchar(100) [not null]
  email varchar(100)
  photo_url varchar(255)
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp
  
  indexes {
    email
  }
}

Table parent_addresses {
  address_id varchar(36) [pk]
  parent_id varchar(36) [not null, ref: > parents.parent_id]
  address_line1 varchar(255) [not null]
  address_line2 varchar(255)
  city varchar(100) [not null]
  state varchar(100) [not null]
  pincode varchar(10)
  latitude decimal(10,8) [not null]
  longitude decimal(11,8) [not null]
  is_primary boolean [default: true]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp
  
  indexes {
    parent_id
    (latitude, longitude)
  }
}

Table drivers {
  driver_id varchar(36) [pk]
  user_id varchar(36) [unique, not null, ref: - users.user_id]
  driver_unique_id varchar(20) [unique, not null, note: 'Unique ID for parents to search/add driver']
  name varchar(100) [not null]
  email varchar(100)
  photo_url varchar(255)
  vehicle_type enum [not null, note: 'van, auto, bus']
  vehicle_number varchar(20) [not null]
  vehicle_capacity int [not null]
  current_student_count int [default: 0, note: 'Current number of active students']
  approval_status enum [default: 'pending', note: 'pending, approved, rejected']
  approved_by varchar(36)
  approved_at timestamp
  rejection_reason text
  is_available boolean [default: true]
  rating decimal(3,2) [default: 0.00]
  total_trips int [default: 0]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp
  
  indexes {
    approval_status
    vehicle_type
    is_available
    driver_unique_id
  }
  
  Note: 'Driver profile. Documents and addresses are in separate tables.'
}

Table driver_addresses {
  address_id varchar(36) [pk]
  driver_id varchar(36) [not null, ref: > drivers.driver_id]
  address_line1 varchar(255) [not null]
  address_line2 varchar(255)
  city varchar(100) [not null]
  state varchar(100) [not null]
  pincode varchar(10)
  latitude decimal(10,8) [not null]
  longitude decimal(11,8) [not null]
  is_primary boolean [default: true]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp
  
  indexes {
    driver_id
    (latitude, longitude)
  }
  
  Note: 'Driver can have multiple addresses, but usually one primary (home).' 
}

Table driver_documents {
  document_id varchar(36) [pk]
  driver_id varchar(36) [not null, ref: > drivers.driver_id]
  driving_license_number varchar(50) [not null]
  driving_license_photo_url varchar(255)
  vehicle_license_number varchar(50) [not null]
  vehicle_license_photo_url varchar(255)
  insurance_number varchar(50)
  insurance_photo_url varchar(255)
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp
  
  indexes {
    driver_id
  }
  
  Note: 'Stores driver document details. Can be extended for document history.'
}

Table schools {
  school_id varchar(36) [pk]
  school_name varchar(200) [not null]
  address varchar(255) [not null]
  city varchar(100) [not null]
  state varchar(100) [not null]
  latitude decimal(10,8) [not null]
  longitude decimal(11,8) [not null]
  contact_number varchar(20)
  email varchar(100)
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp
  
  indexes {
    city
    (latitude, longitude)
  }
}

Table students {
  student_id varchar(36) [pk]
  parent_id varchar(36) [not null, ref: > parents.parent_id]
  school_id varchar(36) [not null, ref: > schools.school_id]
  student_name varchar(100) [not null]
  class varchar(20) [not null]
  section varchar(10)
  roll_number varchar(20)
  photo_url varchar(255)
  date_of_birth date
  gender enum [note: 'male, female, other']
  pickup_address_id varchar(36) [not null, ref: > parent_addresses.address_id]
  emergency_contact varchar(20)
  medical_info text
  is_active boolean [default: true]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp
  
  indexes {
    parent_id
    school_id
    is_active
  }
}

Table driver_student_assignments {
  assignment_id varchar(36) [pk]
  driver_id varchar(36) [not null, ref: > drivers.driver_id]
  student_id varchar(36) [not null, ref: > students.student_id]
  driver_unique_id varchar(20) [not null, note: 'Unique ID parents use to find driver']
  monthly_fee decimal(10,2)
  assignment_status enum [default: 'pending', note: 'active, inactive, pending, parent_requested']
  assigned_date date [not null]
  start_date date
  end_date date
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp
  
  indexes {
    driver_id
    student_id
    assignment_status
    (driver_id, assignment_status)
    driver_unique_id
  }
  
  Note: 'Parents request driver by unique ID. Driver approves and adds student. No fixed routes - dynamic routing based on student addresses.'
}

Table trips {
  trip_id varchar(36) [pk]
  driver_id varchar(36) [not null, ref: > drivers.driver_id]
  school_id varchar(36) [not null, ref: > schools.school_id, note: 'Destination school for pickup, start point for drop']
  trip_type enum [not null, note: 'pickup, drop']
  trip_date date [not null]
  trip_status enum [default: 'scheduled', note: 'scheduled, started, in_progress, completed, cancelled']
  start_time timestamp
  end_time timestamp
  total_distance decimal(10,2) [note: 'in kilometers']
  optimized_route_data json [note: 'Calculated optimal sequence of student pickups/drops based on lat/long']
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp
  
  indexes {
    (driver_id, trip_date)
    trip_status
    trip_date
    school_id
  }
  
  Note: 'Route is dynamically calculated: Driver home → Students (optimized order) → School (pickup) OR School → Students (optimized order) → Driver home (drop)'
}

Table trip_students {
  trip_student_id varchar(36) [pk]
  trip_id varchar(36) [not null, ref: > trips.trip_id]
  student_id varchar(36) [not null, ref: > students.student_id]
  sequence_order int [note: 'Optimized pickup/drop order calculated by system based on lat/long']
  estimated_arrival_time time [note: 'Calculated ETA based on route optimization']
  attendance_status enum [default: 'pending', note: 'present, absent, pending']
  pickup_status enum [default: 'pending', note: 'pending, picked, dropped, no_show']
  pickup_time timestamp
  pickup_latitude decimal(10,8)
  pickup_longitude decimal(11,8)
  pickup_qr_code varchar(100)
  pickup_otp varchar(6)
  drop_time timestamp
  drop_latitude decimal(10,8)
  drop_longitude decimal(11,8)
  drop_qr_code varchar(100)
  drop_otp varchar(6)
  notes text
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp
  
  indexes {
    trip_id
    student_id
    (attendance_status, pickup_status)
    (trip_id, sequence_order)
  }
  
  Note: 'sequence_order is auto-calculated using routing algorithm based on student home addresses and school location'
}

Table location_tracking {
  tracking_id varchar(36) [pk]
  trip_id varchar(36) [not null, ref: > trips.trip_id]
  driver_id varchar(36) [not null, ref: > drivers.driver_id]
  latitude decimal(10,8) [not null]
  longitude decimal(11,8) [not null]
  speed decimal(5,2) [note: 'in km/h']
  heading decimal(5,2) [note: 'direction in degrees']
  accuracy decimal(6,2) [note: 'in meters']
  timestamp timestamp [default: `CURRENT_TIMESTAMP`]
  
  indexes {
    trip_id
    driver_id
    timestamp
  }
}

Table daily_qr_otp {
  qr_otp_id varchar(36) [pk]
  student_id varchar(36) [not null, ref: > students.student_id]
  trip_id varchar(36) [not null, ref: > trips.trip_id]
  qr_code varchar(255) [unique, not null]
  otp_code varchar(6) [not null]
  trip_type enum [not null, note: 'pickup, drop']
  valid_from timestamp [not null]
  valid_until timestamp [not null]
  is_used boolean [default: false]
  used_at timestamp
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  
  indexes {
    (student_id, valid_from)
    qr_code
    otp_code
    valid_until
  }
}

Table notifications {
  notification_id varchar(36) [pk]
  user_id varchar(36) [not null, ref: > users.user_id]
  notification_type enum [not null, note: 'pickup_started, approaching, picked_up, dropped, payment_due, general']
  title varchar(200) [not null]
  message text [not null]
  data json [note: 'Additional data']
  is_read boolean [default: false]
  read_at timestamp
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  
  indexes {
    (user_id, is_read)
    created_at
  }
}

Table subscription_plans {
  plan_id varchar(36) [pk]
  plan_name varchar(100) [not null]
  plan_type enum [not null, note: 'monthly, quarterly, yearly']
  price decimal(10,2) [not null]
  features json
  is_active boolean [default: true]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp
  
  indexes {
    is_active
  }
}

Table parent_subscriptions {
  subscription_id varchar(36) [pk]
  parent_id varchar(36) [not null, ref: > parents.parent_id]
  plan_id varchar(36) [not null, ref: > subscription_plans.plan_id]
  start_date date [not null]
  end_date date [not null]
  subscription_status enum [not null, note: 'active, expired, cancelled']
  auto_renew boolean [default: true]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp
  
  indexes {
    parent_id
    subscription_status
    end_date
  }
}

Table payments {
  payment_id varchar(36) [pk]
  parent_id varchar(36) [not null, ref: > parents.parent_id]
  payment_type enum [not null, note: 'subscription, penalty']
  amount decimal(10,2) [not null]
  currency varchar(3) [default: 'INR']
  payment_method enum [not null, note: 'card, upi, netbanking, wallet, cash']
  payment_status enum [not null, note: 'pending, completed, failed, refunded']
  transaction_id varchar(100)
  gateway_response json
  subscription_id varchar(36) [ref: > parent_subscriptions.subscription_id]
  payment_date timestamp [default: `CURRENT_TIMESTAMP`]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp
  
  indexes {
    parent_id
    payment_status
    payment_date
  }
  
  Note: 'Only parents make payments for subscriptions and penalties. No driver payments.'
}

Table ratings_reviews {
  review_id varchar(36) [pk]
  parent_id varchar(36) [not null, ref: > parents.parent_id]
  driver_id varchar(36) [not null, ref: > drivers.driver_id]
  trip_id varchar(36) [ref: > trips.trip_id]
  rating int [not null, note: '1-5 stars']
  review_text text
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp
  
  indexes {
    driver_id
    rating
  }
}

Table support_tickets {
  ticket_id varchar(36) [pk]
  user_id varchar(36) [not null, ref: > users.user_id]
  subject varchar(200) [not null]
  description text [not null]
  ticket_status enum [default: 'open', note: 'open, in_progress, resolved, closed']
  priority enum [default: 'medium', note: 'low, medium, high, urgent']
  assigned_to varchar(36)
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp
  resolved_at timestamp
  
  indexes {
    user_id
    ticket_status
    created_at
  }
}

Table audit_logs {
  log_id varchar(36) [pk]
  user_id varchar(36) [ref: > users.user_id]
  action_type varchar(50) [not null]
  entity_type varchar(50) [not null]
  entity_id varchar(36)
  old_values json
  new_values json
  ip_address varchar(45)
  user_agent text
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  
  indexes {
    user_id
    (entity_type, entity_id)
    created_at
  }
}

Table admin_portal {
  admin_id varchar(36) [pk]
  username varchar(100) [unique, not null]
  password_hash varchar(255) [not null]
  email varchar(100) [unique, not null]
  phone_number varchar(20)
  is_active boolean [default: true]
  last_login timestamp
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp
  
  indexes {
    username
    email
    is_active
  }
  
  Note: 'Admin portal users for managing the system, roles for access control.'
}

Table roles {
  role_id varchar(36) [pk]
  role_name varchar(50) [unique, not null, note: 'parent, driver, superadmin, admin, support']
  description text
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp
}

Table user_roles {
  user_role_id varchar(36) [pk]
  user_id varchar(36) [not null, ref: > users.user_id]
  role_id varchar(36) [not null, ref: > roles.role_id]
  assigned_by varchar(36) [ref: > admin_portal.admin_id]
  assigned_at timestamp [default: `CURRENT_TIMESTAMP`]
  is_active boolean [default: true]
  
  indexes {
    user_id
    role_id
    is_active
  }
  
  Note: 'Maps users to roles (parent, driver, admin, etc). Admins can assign roles.'
}